# VM-Diffing-Tool

./: .dockerignore  .gitignore  .gitmodules  DOCKER.md  Dockerfile  README.md  STEPS.md  docker-compose.yml  docker.txt  index.html  requirements.txt
.github/: upload.txt
.github/workflows/: deploy-docs.yml
backend/: CMakeLists.txt  main.cpp
backend/include/: Converter.hpp  VMTool.hpp  vmmanager.hpp
backend/src/: Converter.cpp  VMTool.cpp  vmmanager.cpp
docker/: DOCKER.md  Dockerfile  Dockerfile.base  MOUNTING_VM_IMAGES.md  docker-compose.yml
docs/: api.md  deployment.md  endpoints.md  features.md  getting-started.md  vmmanager.md
frontend/: export.sh  pyproject.toml  runs.txt  test.py
frontend/converter_scripts/: vmtool_convertor.py
frontend/demo_tests/: setup_test.py
frontend/interface/GUI/: main.py
frontend/python_scripts/: list_all_files_in_disk.py
frontend/server/: .env.sample  README.md  app.py  config.py  gmail_oauth.py  models.py  requirements.txt  sanity.py  vmtool_flask_app.py
frontend/server/static/docs/: api.md  changelog.md  docker.md  endpoints.md  introduction.md
frontend/server/static/guide/: index.html
frontend/server/templates/: 404.html  base.html  block_contents_compare.html  block_data.html  check_exists.html  compare.html  convert.html  directory_diff.html  file_compare.html  file_contents.html  file_contents_format.html  files_diff.html  files_json.html  index.html  list_files.html  login.html  meta_data.html  run_qemu_vm.html  run_vbox_vm.html  run_vmware_vmdk.html  signup.html  signup_success.html
frontend/shell_scripts/: create_vbox_vm_from_iso.sh  run_qemu_vm.sh  run_vbox_vm.sh  run_vmware_vmdk.sh
frontend/vmmanager_scripts/: vmtool_vmmanager_create_vbox_from_iso.py  vmtool_vmmanager_run_qemu_vm.py  vmtool_vmmanager_run_vbox_vm.py  vmtool_vmmanager_run_vmware_vmdk.py
frontend/vmt/: cli.py  vmt.py
frontend/vmt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
frontend/vmtool_scripts/: block_12_data.json  diff_results.json  meta.json  meta.txt  vmtool_check_file_exists_in_disk.py  vmtool_get_all_files_in_disk_json.py  vmtool_get_block_data_in_disk.py  vmtool_get_disk_meta_data.py  vmtool_get_file_contents_in_disk.py  vmtool_get_file_contents_in_disk_format.py  vmtool_get_meta_data.py  vmtool_list_all_filenames_in_disk.py  vmtool_list_all_files_in_disk.py  vmtool_list_blocks_difference_in_disks.py  vmtool_list_files_in_directory_in_disk.py
guestfs/: PKG-INFO  config.h  setup.py
site/: index.html
site/docs/: convertor.md  docker.md  faq.md  introduction.md  vmmanager.md
