[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vmt"
version = "0.2.0"
description = "VMT CLI for VM disk inspection using vmtool backend"
authors = [
  { name = "VMT Team" }
]
requires-python = ">=3.12"
readme = "README.md"
keywords = ["vm", "qcow2", "guestfs", "vmtool", "vmt"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]

[project.scripts]
vmt = "vmt.vmt:main"

[tool.setuptools]
packages = ["vmt"]

# Install CLI script folders alongside the package as shared data so they are
# available even when running vmt outside the repo checkout.
# These will typically land under: <prefix>/share/vmt/<dir>
[tool.setuptools.data-files]
"share/vmt/vmtool_scripts" = ["vmtool_scripts/*.py"]
"share/vmt/vmmanager_scripts" = ["vmmanager_scripts/*.py"]
"share/vmt/converter_scripts" = ["converter_scripts/*.py"]
